--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -27,19 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Load pickled data\n",
     "import pickle\n",
+    "import numpy as np\n",
     "\n",
     "# TODO: Fill this in based on where you saved the training and testing data\n",
     "\n",
-    "training_file = ?\n",
-    "testing_file = ?\n",
+    "training_file = 'train.p'\n",
+    "testing_file = 'test.p'\n",
     "\n",
     "with open(training_file, mode='rb') as f:\n",
     "    train = pickle.load(f)\n",
@@ -70,30 +71,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "### Replace each question mark with the appropriate value.\n",
     "\n",
     "# TODO: Number of training examples\n",
-    "n_train = ?\n",
+    "n_train = len(X_train)\n",
     "\n",
     "# TODO: Number of testing examples.\n",
-    "n_test = ?\n",
+    "n_test = len(X_test)\n",
     "\n",
     "# TODO: What's the shape of an traffic sign image?\n",
-    "image_shape = ?\n",
+    "image_shape = X_train[0].shape\n",
     "\n",
     "# TODO: How many unique classes/labels there are in the dataset.\n",
-    "n_classes = ?\n",
-    "\n",
-    "print(\"Number of training examples =\", n_train)\n",
-    "print(\"Number of testing examples =\", n_test)\n",
-    "print(\"Image data shape =\", image_shape)\n",
-    "print(\"Number of classes =\", n_classes)"
+    "n_classes = len(np.unique(y_train))"
    ]
   },
   {
@@ -109,17 +105,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAFsAAABZCAYAAABR/liSAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEfJJREFUeJztnFuMXtdVx3/r3L7rXL6Z8YzHTjzjOPe0waFt0ptQIYJW\nFVIpahGVQEUClZcikHig4onHPgCvoFZU6gOirQSiFRRBaUMEtCRNjJ2rnfg6tscez32++7ltHtb6\nJm7iZKYec2LV318anW/O2WfvfdZZe933EeccQxQD792ewJ2EIbELxJDYBWJI7AIxJHaBGBK7QAyJ\nXSD2RGwR+YSInBKR0yLypVs1qZ9VyM06NSLiA68BvwxcAn4MfM4598qtm97PFoI93Ps4cNo5dxZA\nRL4BfAp4W2KXSpGrV8sIkNk7diI6ET2QZ9n2tQEEcLjr/nvjf+fgLQzjIM9z+6ntfRsHHJldy+y+\nwZXQE8Ta5dalJ28s/0Ef2aCNne/1Y5IkHXTzttgLsQ8CF6/7/xLwxJsbicgXgC8AVCtlPv6xxwl9\nodWzBw51CpORPlJ7q8l6pte8AaFctk3c3B60n2qbNM1J0wxQwgO4JKPXi/W6aL/1MLI+UzbabQBa\n1ibwtc2BckQYhgB0Mu2z4vtUjdq1wAdgy9dj3/dwWc6xl07vimB7IfaN3uRbZJJz7ivAVwAa46Mu\nzgV8j6o9QT9OAEgTfYAgDCjl8eBmADzPoxfrOfG0nW/EyIAwtHNGBI8YP9XfXWeUsvvKpZDRLNV7\nUz32Yj02w4iapy8xsJfZx6NSKsF140SezitzORL5yI48rdgLsS8Bd1/3/13A4k43udxRr9QpRTrx\ndrsDQNLrA+B5ASNlm1yq5+I4pu9s0eb6ZJE9YSn08YzjgqiiY4Qpnq/9ZvaSMAI532O0ou06nS4A\nfeObbqZiAyDMByvIURKdUN3mLOi8yAQpReyW2nuxRn4M3Ccih0UkAn4T+M4e+vuZx01ztnMuFZEv\nAv8K+MDXnHMvv9M94iDKc2oSUQ506A7KgXmu4sSlGeJURBwaqwHQXEvYMAklxnol0furvkcY6bk0\nUA7s+uG2kAv6+iMxkSFhRs3mE4r1OVB8eU4zNkloSjT1PeKOyvg2Ks9HbLxe0seVgm1FuRP2IkZw\nzn0X+O5e+riTsCdi/7RwOOI04dpWizHjrwFf+HkPUDk6MLuumpATz6cmyu39RGVw4ql14UolpqdG\nACgxDsDM/iN4QQuA9bVrADRbWwB4LiZe29C+2lW9ljQBiLMUN1Coppyd54GtNBJbJb5yeFAKSSXl\nBnbBDTF01wtEoZwtqAXWjFukTeXoUqayWpxOxZeQ1DhpxSwVEUFyPdeoqFwerc0CUK83mC4rZ1Vj\ns7cXT5On2m/D6Yq5q64rwfdmCOrzOnZ5AQCvfAmAi8ur9FW0k2TKh6n4hIHdO3CGzCz0A59KGOHJ\n7ni2cDGSZjnOxWz1VRwMPL2y2belICQ0ERHY6uzFPVqREvnRg3cBcFBXPvnWFu0LanG2mnoyyzLI\njQCZErtXMeLRYHRmGoD5UTXlZg4/CMDZsXVeuXQWgKW2vrgtERKz6fvanIopX1+EuJu81YN9GwzF\nSIEolLNzB50ExmoV0lQdivW2cl7JV86NXQ5mYjVNL4039vGe6Sn9vaWKrreoS7/ZbBObey+BenpR\nbYzA3G4P48qOKsyku07z7FUAGpOjOvbIewF43/xjVCOd17OnLwPQ7ef45hCZT0NJVESFmSN2wRtx\ngh0w5OwCUShnZ7mj3U9p1Hzq5jKLxR1IlAPjXo9uVxXjlsnG/ROzHDTO7C6oUus39f+oOs7MoYcA\nOPDIwwDMHD5EdVTNwaSnKydeXQZg8eQxrr72IgBXFzSA1N+0OEja5OH73gdAs6Mrbe3yebyS6pCK\nrZKSKet6GNDDw79hmOitKFZBOkc/jrnW61P3dWjPjOrBhMWP8My7fO+E2s37Wk06V5cAWN9SIldn\nNCzzng//Evc8/jEAxu87rH2W/G0PcmCVkGg8Y9/RB5g+ru1Gjz0LwLkXNCrcWTrDZjQBwH3TMwCc\n7q7SGogzT+fVN6K3c/DE7dLKHoqRQlG4ne17wvLyVbaa6r3VaupJjkVmywYBI5U6AHM1NdH8iyfp\nratZV584AMCjT34GgCPv/zBj8/sBiCuqFCX0EQtYeBYtPLOyBsB6B8rz7wdgBO3/ACoyFp77Ed2t\nl/RaQ+34exoVFjZ0VfQTNcI3YxVNGR5V39s2X3fCkLMLRKGc7Xke9XKJUV9Y2lTZe9Xed2he2GQ1\nYrSuSvOAeQ+bzRaZpyvgocd+EYD9984D0K+mvHT2JADdnrZ/8JH3MuLrSlh55X8B+OZTPwDgmeUt\nZPIQAL/+oCrDww88AMDE+gXOnFSTMprW1fLzE4forL8GwItOObtvMfLQi5BSBdmlBznk7AJRLGeL\nUIkCnPiMlFWj5+a2tyy2XIqqTITKQZfPndBJtlp4E0cAuPvBjwCQuXUA/vob32StqY8xU5sHYLUX\nceQelaPPPv+f2m+g/z8+PUV7QZ2al9NzANQ+qtbJ1KUDjJ5eAWD9jMr4xqOHmRpRHVJfU4enXNGV\n1+5mdJKMfJdOTaHEBqdxBJdTCnVRjeXqlqWogux0y2wuqwKabFmqLKsxNf+I/q5pu1OnNR4Sjcxx\neHpSf6+rCPifl7/DxeZ9AEi2D4BRI9inn3iMkdc0/vEH//w0ALUPPgnAbz34IVae0xfQXx/Y/Slj\nIyrCxtsamu1Z3CWJu2RJfxgbuR1RbGwE6Luc0MsRzzwFS2/Vasp5s6N3cyiwEoOOclnoj9FoaGyk\nNqpm2sz+OQA+M/chxqwc4tx//xMAX29fY6KkynLivDpDvYeU03uTs0zO6YrJIz12mjqePzVHOKae\nZ29ZxdRmr0lvRPvqmBnZtmx8uVSimqXbNS87YcjZBaJwBVkOQ7w8waGyOjYuGUTUwqBGpa7cNSjE\nmRgf5d4HVEFOH1GOrt4/D8Bmf5NzZ58H4PtnzgAw+Z5HuH9aZXupqo7Oj9a0rzUXcHdDZXBUUoWX\nNjWhG951EL+i94mv54JSh765+oPSB7GopOdBGIbbCeOdUCyxEcoSkHqOsKQe5Jgtd5db4Uye07FQ\naer0WqsFF67osj5U1sXYK2kgK/QTnn5JA0vHEo2DlE+9zicPa+xkZEzFz0ZL7fq1JCez8Gu1bCVq\nlj1P4gwCvdY3r7DfbhM19FxosREsT5knPTZitsvZdn7+IQpDsVE/gcz3SPuOyNJcoZmAaTwwtTr0\nrNbDWblXMwtJQ22fOeXeQHS5J77w2V9Q0+1+UVPu2wsLXN7Udo+ON7SPJVWU3Y1NoqqaljXf6gdT\n/d+1m6QdMzctmVGvjtF1Kj6cRSOzxO7zHN1usms7e8jZBaJY0y/PaXc74HIkt3i2U+519t57SZeW\ncVWtZA7P5hprKxcA6FsaLbYM/HKaMjmpZt2vPKYm3N+9dopr2oxoWmV7cPJ1AF5/YZIf1nSszMzO\nyZJyZvvaBfqmLLPM6lqyUZxxfmI1LjkD/eLo5W67zmUn7MjZInK3iDwlIq+KyMsi8od2fkJEvici\nr9uxsbsh71zshrNT4I+dc8dEZAR4XkS+B/wO8H3n3Jdti8eXgD95566EQHx64pGY5ZANMipWOtzN\nl0itvPehmk4vWl5h5ewpAHrLyr0Xc3W5v3r8GT5wWMvC5xbPA9AMKuRj+u5rVi01bxx+4sTTnLAK\n1XJVszIfmNKMUOvMKTqbGi2MyupkVbyU3pZxu2WXAuPRbr9NJ8/Id5mr2ZHYzrkrwBX73RSRV9FC\n+E8BH7NmXwf+gx2JDTifiu/hrOw2tUB8nOjRKzm8RKfVmFYiyNV12uc0zHnq6eMATBzVNvsuneTf\nf/gqAHWzkZ/84Ad4/JCafuOzStBPfPzjADxw6SxbXTXl7mloznKsrQmD06+foNPXeVXG9SWd61/j\nvNWjBJGapGLZ9aAUEMTJLjOQP6WCFJF54DHgGWDGXsTghUy/zT1fEJHnROS52Lj3TsWuFaSI1IG/\nB/7IObe1W6/p+p0HoyN1l6QxJYLthGw2yKrb0WUp6aKZX/dq+iqayfAu6o6Sc89+CwC/9gkAfu+j\nn+flNY32bU3qSnhwdpa5/ZYqMyfl3ns1UXDk4P3Q0+w9F1XpHn/qhwBsLq5BpLUk5RmNFp7cXGWx\nq6afH6rS9K34vlyuMCE+i/7KrmixK84WkRAl9N865/7BTi+JyKxdnwWu7WrEOxg7crYoC/8N8Kpz\n7i+vu/Qd4PPAl+347Z36ckCS5/T7PXxfWdvz9H2XLeELIVlPTasTV7TW4+DoODMj+ntj8QUALj6v\nstiFNY4+cVRvbShXVqqV7f01Lh8sIdvA1M/oXVDleuLf/hGAyydV5ndTx8zcQeCN5PHCwipbVmQ5\nlr6xjwegEpVpRCGn/FtXWPkR4LeBF0XkuJ37U5TI3xKR3wUWgM/uasQ7GLuxRv6LG+8MA3jypxnM\nEyEqhaRJD2exYc9kamCRNJxHatq+naucXg/3MbZPSxjSTLly4eRTACxvXKS/9qsA3PfYzwEg+xvE\nVeXsNePKjTNaSRVfOcH5Ez8GoHlJsz02HPuOzDF7v1bJnjhvmaAgopr/ZAqP2LaVlAVvrKrhv12g\n2LoRgdB3lCTY3g7Xt72Ig2ibR76dZrq2qnnA3CtTHVERMeXdA8BkU691l85x+l++AcDSMX0Bpdlp\n2mPafvx9aoNfe0bDsFNZi6kpza7PNlRkTE+qSIomJ/AmxwBoTq3buQsce1FfzqqVwEWRzrWdxiz3\neqTDqN/th4IrohwROT2XD7Yz4kzpxMYcYeBtbywNTbRsrre5XNWk7szDGgepZ+poNJobSG7K1WLk\nSb2Oq6pTcn5Vo32Tdp8floktdp5aofyiTSaMM44/r8pyydP7H67OMFrSWM1VMxl7sZqmWZ4Rph4y\njPrdfii4ihWyXHDiE5hj4A+uDY7yRk1dKVAnolKf58hhdXD2zat8tbAJjbSPZ5WqifFOEpUJBxaf\ndZyaTuhEle096KHFs0On1/yNVS6uqGK8EqpCfvjgPKW6cnayovqlZ7ZfEAhVPOS2LBkG+hmI78Gb\ntmoOAvCeHxKVjRiWILh76gBP7NcS3vNLmgJbCDRQ9PDMXYyNqlJLU/s4QJYQDvbodPVFNNu69CfH\nGuwbJA0sKdBu633djVXqgdn9Jlo2JCKrq7JtWG708oZt5Utz+q02eT6wvN8ZQzFSIIqtiHIguSMM\ngu0d+clgm/SgiYSEtishtY8HOKDbUVNvaVk5+5V1nXqz1d3Obrc6aq4dndtPu70KwPHzGkVIx9Xc\nS0bHGKnoynnhpJqDpy9r36NpzpLFQZJxVbarErBhm0zb29/Y0EM5EOphCX9YWHn7ofhieIHQ9/Es\ngTtQZION/EkuxFYvMmCkJI9wkZp+7b4VvFs84rWFU4S258W3yqjF1YhedxOArrHhwrIqvpn2Pdwf\naHTw9KLtWLNt2Fme0LcVN2rx7LbXouPrCtvqbP7E85R8YaQs7DI0MuTsIlGszBbBC3zSPNv2YpzF\nFeLBxnx8fNPuqWVSOwlsWpVraVzjzPssrdYolcFc/tgyKisrS/SsBDmwfqv2oQEv7m1XY0lZudeJ\nZmAyv8+cxcQbFW3frHRp2icvIptX35LUIoK3W7bmXSA2QUgcd8itij+zJGTu6wP7QUa4/aEsK2js\n92nZ1xgaExZGNW9u1AvITIE1fX2BS61NOlZ7Mm4bUufNPJwAqpE+9ryl3aZN/Iz44zTKatvXyhoH\nuRavsWaiKIxUaQ78gCQXWplPtks7eyhGCsRNf9fvpgYTWQbawO7ySO8uptj9POecc/t2alQosQFE\n5Dnn3PsLHfQm8P8xz6EYKRBDYheId4PYX3kXxrwZ3PJ5Fi6z72QMxUiBKIzYt/O3tt+hUvfPROSy\niBy3v0/uaZwixMjt/q1tq+iavb5SF/g14DeAlnPuz2/FOEVx9va3tp1zMTD41vZtAefcFefcMfvd\nBAaVurcURRH7Rt/avuUPcyvwpkpdgC+KyAsi8rW9FvwXRexdfWv73cabK3WBvwKOAEfRGvW/2Ev/\nRRH7pr61XSRuVKnrnFtyzmVOa+W+iorDm0ZRxL6tv7X9dpW6g5Jow6eBl/YyTiHx7Jv51nbBeLtK\n3c+JyFFU5J0Hfn8vgww9yAIx9CALxJDYBWJI7AIxJHaBGBK7QAyJXSCGxC4QQ2IXiP8D8kIgiGns\nKicAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x140d360b8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "### Data exploration visualization goes here.\n",
     "### Feel free to use as many code cells as needed.\n",
+    "import random\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "# Visualizations will be shown in the notebook.\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "index = random.randint(0, len(X_train))\n",
+    "image = X_train[index].squeeze()\n",
+    "\n",
+    "plt.figure(figsize=(1,1))\n",
+    "plt.imshow(image, cmap='gray')\n",
+    "print(y_train[index])"
    ]
   },
   {
@@ -155,14 +178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "### Preprocess the data here.\n",
-    "### Feel free to use as many code cells as needed."
+    "### Feel free to use as many code cells as needed.\n",
+    "from sklearn.utils import shuffle\n",
+    "\n",
+    "X_train, y_train = shuffle(X_train, y_train)\n"
    ]
   },
   {
@@ -183,15 +209,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training examples = 39209\n",
+      "Number of validation examples = 7842\n",
+      "Number of testing examples = 12630\n",
+      "Image data shape = (32, 32, 3)\n",
+      "Number of classes = 43\n"
+     ]
+    }
+   ],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "### Generate additional data (OPTIONAL!)\n",
     "### and split the data into training/validation/testing sets here.\n",
-    "### Feel free to use as many code cells as needed."
+    "### Feel free to use as many code cells as needed.\n",
+    "# split the training set into training set and validation set\n",
+    "X_train, X_validation, y_train, y_validation = train_test_split(X_train, y_train, test_size=0.20, random_state=7)\n",
+    "\n",
+    "                                                                # validation examples\n",
+    "n_validation = len(X_validation)\n",
+    "\n",
+    "print(\"Number of training examples =\", n_train)\n",
+    "print(\"Number of validation examples =\", n_validation)\n",
+    "print(\"Number of testing examples =\", n_test)\n",
+    "print(\"Image data shape =\", image_shape)\n",
+    "print(\"Number of classes =\", n_classes)\n",
+    "                                                                \n",
+    "assert(len(X_train) == len(y_train))\n",
+    "assert(len(X_validation) == len(y_validation))\n",
+    "assert(len(X_test) == len(y_test))                                                                "
    ]
   },
   {
@@ -219,7 +274,11 @@
    "outputs": [],
    "source": [
     "### Define your architecture here.\n",
-    "### Feel free to use as many code cells as needed."
+    "### Feel free to use as many code cells as needed.\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "EPOCHS = 10\n",
+    "BATCH_SIZE = 128"
    ]
   },
   {
@@ -241,14 +300,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training...\n",
+      "\n",
+      "EPOCH 1 ...\n",
+      "Validation Accuracy = 0.607\n",
+      "\n",
+      "EPOCH 2 ...\n",
+      "Validation Accuracy = 0.767\n",
+      "\n",
+      "EPOCH 3 ...\n",
+      "Validation Accuracy = 0.827\n",
+      "\n",
+      "EPOCH 4 ...\n",
+      "Validation Accuracy = 0.872\n",
+      "\n",
+      "EPOCH 5 ...\n",
+      "Validation Accuracy = 0.896\n",
+      "\n",
+      "EPOCH 6 ...\n",
+      "Validation Accuracy = 0.905\n",
+      "\n",
+      "EPOCH 7 ...\n",
+      "Validation Accuracy = 0.928\n",
+      "\n",
+      "EPOCH 8 ...\n",
+      "Validation Accuracy = 0.928\n",
+      "\n",
+      "EPOCH 9 ...\n",
+      "Validation Accuracy = 0.939\n",
+      "\n",
+      "EPOCH 10 ...\n",
+      "Validation Accuracy = 0.936\n",
+      "\n",
+      "Model saved\n"
+     ]
+    }
+   ],
    "source": [
-    "### Train your model here.\n",
-    "### Feel free to use as many code cells as needed."
+    "import tensorflow as tf\n",
+    "from tensorflow.contrib.layers import flatten\n",
+    "\n",
+    "EPOCHS = 10\n",
+    "BATCH_SIZE = 128\n",
+    "\n",
+    "def LeNet(x):    \n",
+    "    # Arguments used for tf.truncated_normal, randomly defines variables for the weights and biases for each layer\n",
+    "    mu = 0\n",
+    "    sigma = 0.1\n",
+    "    \n",
+    "    # SOLUTION: Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
+    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 3, 6), mean = mu, stddev = sigma))\n",
+    "    conv1_b = tf.Variable(tf.zeros(6))\n",
+    "    conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
+    "\n",
+    "    # SOLUTION: Activation.\n",
+    "    conv1 = tf.nn.relu(conv1)\n",
+    "\n",
+    "    # SOLUTION: Pooling. Input = 28x28x6. Output = 14x14x6.\n",
+    "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "\n",
+    "    # SOLUTION: Layer 2: Convolutional. Output = 10x10x16.\n",
+    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean = mu, stddev = sigma))\n",
+    "    conv2_b = tf.Variable(tf.zeros(16))\n",
+    "    conv2   = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
+    "    \n",
+    "    # SOLUTION: Activation.\n",
+    "    conv2 = tf.nn.relu(conv2)\n",
+    "\n",
+    "    # SOLUTION: Pooling. Input = 10x10x16. Output = 5x5x16.\n",
+    "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "\n",
+    "    # SOLUTION: Flatten. Input = 5x5x16. Output = 400.\n",
+    "    fc0   = flatten(conv2)\n",
+    "    \n",
+    "    # SOLUTION: Layer 3: Fully Connected. Input = 400. Output = 120.\n",
+    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(400, 120), mean = mu, stddev = sigma))\n",
+    "    fc1_b = tf.Variable(tf.zeros(120))\n",
+    "    fc1   = tf.matmul(fc0, fc1_W) + fc1_b\n",
+    "    \n",
+    "    # SOLUTION: Activation.\n",
+    "    fc1    = tf.nn.relu(fc1)\n",
+    "\n",
+    "    # SOLUTION: Layer 4: Fully Connected. Input = 120. Output = 84.\n",
+    "    fc2_W  = tf.Variable(tf.truncated_normal(shape=(120, 84), mean = mu, stddev = sigma))\n",
+    "    fc2_b  = tf.Variable(tf.zeros(84))\n",
+    "    fc2    = tf.matmul(fc1, fc2_W) + fc2_b\n",
+    "    \n",
+    "    # SOLUTION: Activation.\n",
+    "    fc2    = tf.nn.relu(fc2)\n",
+    "\n",
+    "    # SOLUTION: Layer 5: Fully Connected. Input = 84. Output = 10.\n",
+    "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, 43), mean = mu, stddev = sigma))\n",
+    "    fc3_b  = tf.Variable(tf.zeros(43))\n",
+    "    logits = tf.matmul(fc2, fc3_W) + fc3_b\n",
+    "    \n",
+    "    return logits\n",
+    "\n",
+    "x = tf.placeholder(tf.float32, (None, 32, 32, 3))\n",
+    "y = tf.placeholder(tf.int32, (None))\n",
+    "one_hot_y = tf.one_hot(y, 43)\n",
+    "\n",
+    "rate = 0.001\n",
+    "\n",
+    "logits = LeNet(x)\n",
+    "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits, one_hot_y)\n",
+    "loss_operation = tf.reduce_mean(cross_entropy)\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate = rate)\n",
+    "training_operation = optimizer.minimize(loss_operation)\n",
+    "\n",
+    "correct_prediction = tf.equal(tf.argmax(logits, 1), tf.argmax(one_hot_y, 1))\n",
+    "accuracy_operation = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
+    "saver = tf.train.Saver()\n",
+    "\n",
+    "def evaluate(X_data, y_data):\n",
+    "    num_examples = len(X_data)\n",
+    "    total_accuracy = 0\n",
+    "    sess = tf.get_default_session()\n",
+    "    for offset in range(0, num_examples, BATCH_SIZE):\n",
+    "        batch_x, batch_y = X_data[offset:offset+BATCH_SIZE], y_data[offset:offset+BATCH_SIZE]\n",
+    "        accuracy = sess.run(accuracy_operation, feed_dict={x: batch_x, y: batch_y})\n",
+    "        total_accuracy += (accuracy * len(batch_x))\n",
+    "    return total_accuracy / num_examples\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    num_examples = len(X_train)\n",
+    "    \n",
+    "    print(\"Training...\")\n",
+    "    print()\n",
+    "    for i in range(EPOCHS):\n",
+    "        X_train, y_train = shuffle(X_train, y_train)\n",
+    "        for offset in range(0, num_examples, BATCH_SIZE):\n",
+    "            end = offset + BATCH_SIZE\n",
+    "            batch_x, batch_y = X_train[offset:end], y_train[offset:end]\n",
+    "            sess.run(training_operation, feed_dict={x: batch_x, y: batch_y})\n",
+    "            \n",
+    "        validation_accuracy = evaluate(X_validation, y_validation)\n",
+    "        print(\"EPOCH {} ...\".format(i+1))\n",
+    "        print(\"Validation Accuracy = {:.3f}\".format(validation_accuracy))\n",
+    "        print()\n",
+    "        \n",
+    "    saver.save(sess, './lenet')\n",
+    "    print(\"Model saved\")"
    ]
   },
   {
@@ -308,14 +510,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy = 0.846\n"
+     ]
+    }
+   ],
    "source": [
     "### Load the images and plot them here.\n",
-    "### Feel free to use as many code cells as needed."
+    "### Feel free to use as many code cells as needed.\n",
+    "with tf.Session() as sess:\n",
+    "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
+    "\n",
+    "    test_accuracy = evaluate(X_test, y_test)\n",
+    "    print(\"Test Accuracy = {:.3f}\".format(test_accuracy))"
    ]
   },
   {
@@ -463,6 +678,10 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
