implemented Layer class

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Self-Driving Car Engineer Nanodegree\n",
     "\n",
@@ -19,7 +22,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "---\n",
     "## Step 0: Load The Data"
@@ -29,9 +35,23 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'train.p'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-17c1d2aa5ffe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mtesting_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'test.p'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mtrain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtesting_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'train.p'"
+     ]
+    }
+   ],
    "source": [
     "# Load pickled data\n",
     "import pickle\n",
@@ -54,7 +74,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "---\n",
     "\n",
@@ -74,7 +97,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -95,7 +120,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Visualize the German Traffic Signs Dataset using the pickled file(s). This is open ended, suggestions include: plotting traffic sign images, plotting the count of each sign, etc.\n",
     "\n",
@@ -108,7 +136,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -281,7 +311,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "----\n",
     "\n",
@@ -303,7 +336,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Implementation\n",
     "\n",
@@ -314,7 +350,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -373,7 +411,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Question 1 \n",
     "\n",
@@ -382,7 +423,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**Answer:**"
    ]
@@ -391,7 +435,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -522,7 +568,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Question 2\n",
     "\n",
@@ -531,7 +580,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**Answer:**"
    ]
@@ -540,7 +592,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -554,7 +608,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Question 3\n",
     "\n",
@@ -564,7 +621,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**Answer:**"
    ]
@@ -573,7 +633,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -708,24 +770,44 @@
     "def no_batchnorm(Ylogits, is_test, iteration, convolutional=False):\n",
     "    return Ylogits, tf.no_op()\n",
     "\n",
-    "class Conv2d(object):\n",
+    "class Layer(object):\n",
     "    def __init__(self, \n",
-    "                 nb_features, \n",
+    "                 input_channels = input_channels, \n",
+    "                 krows=krows, \n",
+    "                 kcols=kcols, \n",
+    "                 output_channels = output_channels,\n",
+    "                 strides=None):\n",
+    "        self.input_channels = input_channels\n",
+    "        self.krows = krows\n",
+    "        self.kcols = kcols\n",
+    "        self.output_channels = output_channels\n",
+    "        self.strides = [1, strides, strides, 1]\n",
+    "    \n",
+    "class Conv2d(Layer):\n",
+    "    def __init__(self, \n",
+    "                 output_channels, \n",
     "                 nb_rows, \n",
     "                 nb_cols,\n",
     "                 strides=1,\n",
-    "                 input_shape = None \n",
-    "                 activation=tf.nn.relu,\n",
-    "                 mean = 0,\n",
-    "                 stddev = 0.1,\n",
-    "                 padding = 'VALID',\n",
-    "                 pkeep = None):\n",
-    "        self.nb_features = nb_features\n",
-    "        self.nb_rows = nb_rows\n",
-    "        self.nb_cols = nb_cols\n",
-    "        self.strides = [1, strides, strides, 1]\n",
-    "        self.activation = activation\n",
-    "        self.pkeep = pkeep\n",
+    "                 input_channels = None\n",
+    "                 input_shape = None):\n",
+    "        if input_shape:\n",
+    "            Layer.__init__(self, \n",
+    "                           input_channels = input_shape[2], \n",
+    "                           krows = krows,\n",
+    "                           kcols = kcols,\n",
+    "                           output_channels = output_channels,\n",
+    "                           strides = strides)\n",
+    "        elif input_channels:\n",
+    "            Layer.__init__(self, \n",
+    "                           input_channels = input_channels, \n",
+    "                           krows = krows,\n",
+    "                           kcols = kcols,\n",
+    "                           output_channels = output_channels,\n",
+    "                           strides = strides)\n",
+    "        else:\n",
+    "            raise ValueError(\"both input_channels and input_shape can't be None\")\n",
+    "            \n",
     "        self.W = tf.Variable(tf.truncated_normal(shape = ksize.append(features), \n",
     "                                                 mean = self.mean, \n",
     "                                                 stddev = self.stddevv))\n",
@@ -737,23 +819,23 @@
     "            self.Y = tf.nn.conv2d(X, self.W, strides=self.strides, padding=self.padding) + self.B\n",
     "            self.Y = self.activation(self.Y)\n",
     "\n",
-    "    def Y(self, X=None):\n",
+    "    def Y(self, X=None, input_channels=None):\n",
     "        if X:\n",
     "            self.Y = tf.nn.conv2d(X, self.W, strides=self.strides, padding=self.padding) + self.B\n",
     "            self.Y = self.activation(self.Y)            \n",
     "        return self.Y\n",
     "        \n",
     "class MaxPool(object):\n",
-    "    def __init__(self, X = x, ksize = ksize, strides = strides, padding = 'VALID'):\n",
-    "        self.X = x\n",
-    "        self.strides = [1, strides, strides, 1]\n",
-    "        self.padding = padding\n",
-    "        self.ksize = ksize\n",
-    "        self.Y = tf.nn.max_pool(X, \n",
-    "                              ksize=self.ksize, \n",
-    "                              strides=self.strides, \n",
-    "                              padding=self.padding)\n",
+    "    def __init__(self,\n",
+    "                 pool_size = pool_size, \n",
+    "                 strides = strides):\n",
+    "        Layer.__init__(self, krows=pool_size[0], kcols=pool_size[1], strides=strides)\n",
+    "        \n",
     "    def Y(self, X):\n",
+    "        self.Y = tf.nn.max_pool(X, \n",
+    "                                ksize=[1, self.krows, self.kcols, 1] \n",
+    "                                strides=self.strides, \n",
+    "                                padding='VALID')        \n",
     "        return self.Y\n",
     "    \n",
     "class FC(object):\n",
@@ -790,14 +872,17 @@
     "        self._test = test\n",
     "        self._last_layer = None\n",
     "    \n",
-    "    def add(self, data):\n",
-    "        self._last_layer = data.Y(self._last_layer)\n",
+    "    def add(self, layer):\n",
+    "        if (self._last_layer):\n",
+    "            input_channels = self._last_layer.get_output_channels()\n",
+    "            Y = self._last_layer.Y()\n",
+    "            self._last_layer = data.Y(self._last_layer.Y(_s))\n",
     "        return self._last_layer\n",
     "            \n",
     "                    \n",
     "model = ConvNetModel()\n",
     "model.add(Conv2d(6, 5, 5, input_shape = (32, 32, 1), strides=1))\n",
-    "model.add(MaxPool(ksize=[1,2,2,1], strides=2))\n",
+    "model.add(MaxPool(pool_size=(2,2), strides=2))\n",
     "model.add(Conv2d(16, 5, 5))\n",
     "model.add(MaxPool(ksize=[1,2,2,1], strides=2))\n",
     "model.add(flatten())\n",
@@ -916,7 +1001,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Question 4\n",
     "\n",
@@ -925,14 +1013,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**Answer:**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Question 5\n",
     "\n",
@@ -942,14 +1036,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**Answer:**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "---\n",
     "\n",
@@ -962,7 +1062,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Implementation\n",
     "\n",
@@ -973,7 +1076,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -996,7 +1101,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Question 6\n",
     "\n",
@@ -1006,7 +1114,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**Answer:**"
    ]
@@ -1015,7 +1126,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1025,7 +1138,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Question 7\n",
     "\n",
@@ -1036,7 +1152,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**Answer:**"
    ]
@@ -1045,7 +1164,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1055,7 +1176,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Question 8\n",
     "\n",
@@ -1098,14 +1222,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**Answer:**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "> **Note**: Once you have completed all of the code implementations and successfully answered each question above, you may finalize your work by exporting the iPython Notebook as an HTML document. You can do this by using the menu above and navigating to  \\n\",\n",
     "    \"**File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission."
@@ -1115,7 +1245,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
